@@ -198,6 +198,7 @@ Fixes:
    * Fix the elm_shutdown bug in _elm_shutdown_config.
    * Fix box layout bug when items with max size force sizes below minimum.
    * Fix ctxpopup geometry when parent is an elm_win.
+   * Quit the scroll animator if the scroller don't have a bounce and reach a edge.
 
 Removals:
 
